--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": ".",
-  "name": "tt_impltech",
+  "name": "tt_Halo__lab",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
